finish to update swagger
